salesforce_sfdx/main/default/objects/Opportunity/fields/OSFPE_fld_Fecha_de_fin_del_suministro__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Fecha_de_fin_del_suministro__c</fullName>
    <label>Fecha de fin del suministro</label>
    <type>Date</type>
</CustomField>