salesforce_sfdx/main/default/objects/Opportunity/fields/OSFPE_fld_Indexacion_precio_potencia__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Indexacion_precio_potencia__c</fullName>
    <label>Indexación precio potencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>