salesforce_sfdx/main/default/objects/Opportunity/fields/OSFPE_fld_Plazo_de_facturacion_dias__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Plazo_de_facturacion_dias__c</fullName>
    <defaultValue>15</defaultValue>
    <label>Plazo de facturación (días)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>