salesforce_sfdx/main/default/objects/Opportunity/fields/OSFPE_fld_Plazo_de_suministro_anos__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Plazo_de_suministro_anos__c</fullName>
    <formula>ROUND((OSFPE_fld_Fecha_de_fin_del_suministro__c - OSFMX_SupplyStartDate__c)/365,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plazo de suministro (años)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>