salesforce_sfdx/main/default/objects/Opportunity/fields/OSFPE_fld_Potencia_contratada_finanza_MW__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Potencia_contratada_finanza_MW__c</fullName>
    <label>Potencia contratada finanzas (MW)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>