salesforce_sfdx/main/default/objects/Opportunity/fields/OSFPE_fld_Potencia_Maxima_Contratada_HFP__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Potencia_Maxima_Contratada_HFP__c</fullName>
    <label>Potencia Máxima Contratada HFP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>