salesforce_sfdx/main/default/objects/Opportunity/fields/OSFPE_fld_Precio_de_energia__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Precio_de_energia__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Precio de energía</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>