salesforce_sfdx/main/default/objects/Opportunity/fields/OSFPE_fld_Precio_de_potencia__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Precio_de_potencia__c</fullName>
    <defaultValue>6.21</defaultValue>
    <label>Precio de potencia</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>