salesforce_sfdx/main/default/objects/Opportunity/fields/OSFPE_fld_Requiere_aprobacion_Directorio__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Requiere_aprobacion_Directorio__c</fullName>
    <formula>IF( OSFPE_fld_Energia_Total_TWh__c &gt; 2.5, &quot;SI&quot;, &quot;NO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requiere aprobación de Directorio</label>
    <type>Text</type>
</CustomField>