salesforce_sfdx/main/default/objects/Opportunity/fields/Plazo_de_contrato_meses__c.field-meta.xml
<CustomField>
    <fullName>Plazo_de_contrato_meses__c</fullName>
    <label>Plazo de contrato (meses)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>