salesforce_sfdx/main/default/objects/Opportunity/fields/Precio_competidor__c.field-meta.xml
<CustomField>
    <fullName>Precio_competidor__c</fullName>
    <label>Precio competidor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>