salesforce_sfdx/main/default/objects/Opportunity/fields/Tipo_de_propuesta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_propuesta__c</fullName>
    <label>Tipo de propuesta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No vinculante</fullName>
            </value>
            <value>
                <fullName>Vinculante</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>