salesforce_sfdx/main/default/objects/Opportunity/recordTypes/Oportunidad_Colombia.recordType-meta.xml
<RecordType>
    <fullName>Oportunidad_Colombia</fullName>
    <active>false</active>
    <businessProcess>Oportunidad Colombia</businessProcess>
    <label>Oportunidad Colombia</label>
</RecordType>