salesforce_sfdx/main/default/objects/Opportunity/recordTypes/Oportunidad_Energ_a_Colombia.recordType-meta.xml
<RecordType>
    <fullName>Oportunidad_Energ_a_Colombia</fullName>
    <active>true</active>
    <businessProcess>Oportunidad Colombia</businessProcess>
    <label>Oportunidad Energía Colombia</label>
</RecordType>