salesforce_sfdx/main/default/objects/Opportunity/recordTypes/Oportunidad_Energia_Chile.recordType-meta.xml
<RecordType>
    <fullName>Oportunidad_Energia_Chile</fullName>
    <active>true</active>
    <businessProcess>Engie Chile</businessProcess>
    <label>Oportunidad Energía Chile</label>
</RecordType>