salesforce_sfdx/main/default/objects/Opportunity/recordTypes/Oportunidad_Gas_Chile.recordType-meta.xml
<RecordType>
    <fullName>Oportunidad_Gas_Chile</fullName>
    <active>true</active>
    <businessProcess>Engie Chile</businessProcess>
    <label>Oportunidad Gas Chile</label>
</RecordType>