salesforce_sfdx/main/default/objects/Opportunity/recordTypes/Oportunidad_Soluciones_Chile.recordType-meta.xml
<RecordType>
    <fullName>Oportunidad_Soluciones_Chile</fullName>
    <active>true</active>
    <businessProcess>Engie Chile</businessProcess>
    <label>Oportunidad Soluciones Chile</label>
</RecordType>