salesforce_sfdx/main/default/objects/Opportunity/recordTypes/Oportunidad_Soluciones_Colombia.recordType-meta.xml
<RecordType>
    <fullName>Oportunidad_Soluciones_Colombia</fullName>
    <active>true</active>
    <businessProcess>Oportunidad Colombia</businessProcess>
    <label>Oportunidad Soluciones Colombia</label>
</RecordType>