salesforce_sfdx/main/default/objects/Opportunity/recordTypes/OSFMX_Electricidad.recordType-meta.xml
<RecordType>
    <fullName>OSFMX_Electricidad</fullName>
    <active>true</active>
    <businessProcess>Electricidad</businessProcess>
    <label>Electricidad</label>
</RecordType>