salesforce_sfdx/main/default/objects/Opportunity/recordTypes/OSFMX_Gas.recordType-meta.xml
<RecordType>
    <fullName>OSFMX_Gas</fullName>
    <active>true</active>
    <businessProcess>Gas</businessProcess>
    <label>Gas Natural</label>
</RecordType>