salesforce_sfdx/main/default/objects/Opportunity/recordTypes/OSFPE_rt_Oportunidad_Energia_Peru.recordType-meta.xml
<RecordType>
    <fullName>OSFPE_rt_Oportunidad_Energia_Peru</fullName>
    <active>true</active>
    <businessProcess>OSFPE_salesPrc_Oportunidad_Energia_Peru</businessProcess>
    <description>Tipo de registro utilizado para las oportunidades PPA</description>
    <label>Oportunidad Energía Peru</label>
</RecordType>