salesforce_sfdx/main/default/objects/Opportunity/recordTypes/OSFPE_rt_Oportunidad_Soluciones_Peru.recordType-meta.xml
<RecordType>
    <fullName>OSFPE_rt_Oportunidad_Soluciones_Peru</fullName>
    <active>true</active>
    <businessProcess>OSFPE_salesPrc_Oportunidad_Soluciones_Peru</businessProcess>
    <description>Tipo de registro utilizado para otras oportunidades</description>
    <label>Oportunidad Soluciones Peru</label>
</RecordType>