salesforce_sfdx/main/default/objects/Opportunity/recordTypes/Otras_Soluciones.recordType-meta.xml
<RecordType>
    <fullName>Otras_Soluciones</fullName>
    <active>true</active>
    <businessProcess>Otros servicios</businessProcess>
    <label>Otras Soluciones</label>
</RecordType>