salesforce_sfdx/main/default/objects/Opportunity/validationRules/Cerrada_no_ganada_Chile.validationRule-meta.xml
<ValidationRule>
    <fullName>Cerrada_no_ganada_Chile</fullName>
    <active>true</active>
    <description>Exige ingresar datos en sección cerrada no ganada</description>
    <errorConditionFormula>(ISPICKVAL(StageName, &quot;Cerrada no ganada&quot;) &amp;&amp;  (ISPICKVAL(OSFCL_Opciones_cierre_no_ganado__c, &quot;&quot;)) &amp;&amp; $Profile.Name &lt;&gt; &quot;System Administrator&quot;&amp;&amp;
((RecordType.DeveloperName=&apos;Oportunidad_Energia_Chile&apos;)  || (RecordType.DeveloperName=&apos;Oportunidad_Gas_Chile&apos;)  || 
(RecordType.DeveloperName=&apos;Oportunidad_Soluciones_Chile&apos;)))</errorConditionFormula>
    <errorDisplayField>OSFCL_Opciones_cierre_no_ganado__c</errorDisplayField>
    <errorMessage>Debe ingresar datos en el campo &quot;Opciones cierre no ganado&quot;</errorMessage>
</ValidationRule>