salesforce_sfdx/main/default/objects/Opportunity/validationRules/Fecha_cierre_vencida_Colombia.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_cierre_vencida_Colombia</fullName>
    <active>true</active>
    <errorConditionFormula>$Profile.Name &lt;&gt; &quot;System Administrator&quot;&amp;&amp;
((RecordType.DeveloperName=&apos;Oportunidad_Colombia&apos;) || (RecordType.DeveloperName=&apos;Oportunidad_Energ_a_Colombia&apos;)|| (RecordType.DeveloperName=&apos;Oportunidad_Soluciones_Colombia&apos;))&amp;&amp;
(ISPICKVAL(StageName,&quot;Prospección&quot;) || 
ISPICKVAL(StageName,&quot;Análisis&quot;) || 
ISPICKVAL(StageName,&quot;Preparación&quot;) || 
ISPICKVAL(StageName,&quot;Negociación&quot;)) &amp;&amp;
((RecordType.Name = &quot;Oportunidad Energía Colombia&quot;) ||
(RecordType.Name = &quot;Oportunidad Soluciones Colombia&quot;)) &amp;&amp;
(CloseDate &lt; TODAY())</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>DEBE ACTUALIZAR LA FECHA DE CIERRE POR UNA FECHA EN EL FUTURO.</errorMessage>
</ValidationRule>