salesforce_sfdx/main/default/objects/Opportunity/validationRules/Fecha_de_Adjudicacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_de_Adjudicacion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Oportunidad_Energia_Chile&apos;,
				ISBLANK(OSFMX_AwardDate__c),
				ISPICKVAL(StageName, &apos;Cerrada ganada&apos;) )</errorConditionFormula>
    <errorDisplayField>OSFMX_AwardDate__c</errorDisplayField>
    <errorMessage>Debe ingresar la fecha de Adjudicación</errorMessage>
</ValidationRule>