salesforce_sfdx/main/default/objects/Opportunity/validationRules/Fecha_de_cierre_vencida.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_de_cierre_vencida</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISPICKVAL(StageName,&quot;Stand-by&quot;),
ISPICKVAL(StageName,&quot;Abierta&quot;),
ISPICKVAL(StageName,&quot;En proceso&quot;),
ISPICKVAL(StageName,&quot;Oferta Presentada&quot;)), 
CloseDate  &lt;  TODAY(),$Profile.Name &lt;&gt; &quot;Administrador del sistema&quot;,$Profile.Name &lt;&gt; &quot;System Administrator&quot;)</errorConditionFormula>
    <errorMessage>DEBE ACTUALIZAR LA FECHA DE CIERRE POR UNA FECHA EN EL FUTURO</errorMessage>
</ValidationRule>