salesforce_sfdx/main/default/objects/Opportunity/validationRules/Gas_CantidadMaximaDiaria.validationRule-meta.xml
<ValidationRule>
    <fullName>Gas_CantidadMaximaDiaria</fullName>
    <active>true</active>
    <description>Regla de validación que el campo Cantidad Máxima Diaria de la oferta de Gas no se encuentre vacío en las etapas “En proceso, Oferta Presentada, y Cerrada Ganada”</description>
    <errorConditionFormula>AND ( 
OR ( 
ISPICKVAL(StageName, &quot;En proceso&quot;), 
ISPICKVAL(StageName, &quot;Oferta Presentada&quot;), 
ISPICKVAL(StageName, &quot;Cerrada ganada&quot;), 
ISPICKVAL(StageName, &quot;Cerrada Perdida&quot;), 
ISPICKVAL(StageName, &quot;Cerrada desierta&quot;)),
$RecordType.Name = &quot;Oportunidad_Gas&quot;, 
ISBLANK(TEXT(OSFMX_Maximumdailycapacity__c)),$Profile.Name &lt;&gt; &quot;Administrador del sistema&quot;,$Profile.Name &lt;&gt; &quot;System Administrator&quot;)</errorConditionFormula>
    <errorMessage>Usted debe completar el campo Capacidad Máxima Diaria antes de pasar a las siguientes etapas.</errorMessage>
</ValidationRule>