salesforce_sfdx/main/default/objects/Opportunity/validationRules/Motivo_de_perdida_Chile.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivo_de_perdida_Chile</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL(OSFCL_Opciones_cierre_no_ganado__c,&quot;Perdida&quot;) || 
ISPICKVAL(OSFCL_Opciones_cierre_no_ganado__c,&quot;Desistida&quot;) || 
ISPICKVAL(OSFCL_Opciones_cierre_no_ganado__c,&quot;Desierta&quot;))  &amp;&amp; 
ISPICKVAL(OSFMX_LossReason__c,&quot;&quot;)  &amp;&amp; $Profile.Name &lt;&gt; &quot;System Administrator&quot;&amp;&amp;
((RecordType.DeveloperName=&apos;Oportunidad_Energia_Chile&apos;) || (RecordType.DeveloperName=&apos;Oportunidad_Gas_Chile&apos;) ||
(RecordType.DeveloperName=&apos;Oportunidad_Soluciones_Chile&apos;))</errorConditionFormula>
    <errorDisplayField>OSFMX_LossReason__c</errorDisplayField>
    <errorMessage>Debe seleccionar una opción en el campo Motivo no adjudicación</errorMessage>
</ValidationRule>