salesforce_sfdx/main/default/objects/Opportunity/validationRules/Motivo_no_adjudicacion_colombia.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivo_no_adjudicacion_colombia</fullName>
    <active>true</active>
    <description>Debe registrar dato en motivo de no adjudicación si etapa es cerrada no ganada</description>
    <errorConditionFormula>$Profile.Name &lt;&gt; &quot;System Administrator&quot;&amp;&amp;
((RecordType.DeveloperName=&apos;Oportunidad_Colombia&apos;) || (RecordType.DeveloperName=&apos;Oportunidad_Energ_a_Colombia&apos;)|| (RecordType.DeveloperName=&apos;Oportunidad_Soluciones_Colombia&apos;))&amp;&amp;
(ISPICKVAL(OSFCL_Opciones_cierre_no_ganado__c,&quot;Perdida&quot;) || 
ISPICKVAL(OSFCL_Opciones_cierre_no_ganado__c,&quot;Desistida&quot;) || 
ISPICKVAL(OSFCL_Opciones_cierre_no_ganado__c,&quot;Desierta&quot;))  &amp;&amp; 
ISPICKVAL(OSFMX_LossReason__c,&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>OSFMX_LossReason__c</errorDisplayField>
    <errorMessage>Debe seleccionar una opción en el campo Motivo no adjudicación</errorMessage>
</ValidationRule>