salesforce_sfdx/main/default/objects/Opportunity/validationRules/Oferta_sincronizada.validationRule-meta.xml
<ValidationRule>
    <fullName>Oferta_sincronizada</fullName>
    <active>false</active>
    <description>Debe incluir el producto de la oportunidad y una oferta sincronizada antes de cambiar la Etapa a &quot;Oferta Presentada&quot; o &quot;Cerrada ganada&quot;.</description>
    <errorConditionFormula>or(
AND (
  CASE( StageName,
     &quot;Oferta Presentada&quot;, 1,
     &quot;Cerrada ganada&quot;, 1,
     0) = 1,
  NOT(HasOpportunityLineItem)),
AND (
  CASE( StageName,
     &quot;Oferta Presentada&quot;, 1,
     &quot;Cerrada ganada&quot;, 1,
     0) = 1,
 OSFMX_NumberAssociatedOffers__c &lt; 1))</errorConditionFormula>
    <errorMessage>Debe incluir el producto de la oportunidad y una oferta sincronizada antes de cambiar la Etapa a &quot;Oferta Presentada&quot; o &quot;Cerrada ganada&quot;.</errorMessage>
</ValidationRule>