salesforce_sfdx/main/default/objects/Opportunity/validationRules/OfertaVinculanteSyncEstandar.validationRule-meta.xml
<ValidationRule>
    <fullName>OfertaVinculanteSyncEstandar</fullName>
    <active>false</active>
    <description>Para cerrar ganada una oportunidad la oferta no debe tener el atributo de No Vinculante.</description>
    <errorConditionFormula>AND(

  ISPICKVAL(StageName, "Cerrada ganada"),

TEXT(   SyncedQuote.OSFMX_OfferType__c  )= "No Vinculante")</errorConditionFormula>
    <errorMessage>La oferta es No Vinculante por tal motivo no puedes cerrar la oportunidad ganada.</errorMessage>
</ValidationRule>