salesforce_sfdx/main/default/objects/Opportunity/validationRules/Opciones_Cerrada_no_ganada_Colombia.validationRule-meta.xml
<ValidationRule>
    <fullName>Opciones_Cerrada_no_ganada_Colombia</fullName>
    <active>true</active>
    <description>Pide dato en campo Opciones cerrada no ganada si la etapa es cerrada no ganada</description>
    <errorConditionFormula>$Profile.Name &lt;&gt; &quot;System Administrator&quot;&amp;&amp;
((RecordType.DeveloperName=&apos;Oportunidad_Colombia&apos;) || (RecordType.DeveloperName=&apos;Oportunidad_Energ_a_Colombia&apos;)|| (RecordType.DeveloperName=&apos;Oportunidad_Soluciones_Colombia&apos;))&amp;&amp;
AND(ISPICKVAL(StageName, &quot;Cerrada no ganada&quot;), ISPICKVAL(OSFCL_Opciones_cierre_no_ganado__c, &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>OSFCL_Opciones_cierre_no_ganado__c</errorDisplayField>
    <errorMessage>Debe ingresar datos en el campo &quot;Opciones cierre no ganado&quot;</errorMessage>
</ValidationRule>