salesforce_sfdx/main/default/objects/Opportunity/validationRules/Oportunidad_firmada.validationRule-meta.xml
<ValidationRule>
    <fullName>Oportunidad_firmada</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;Administrador del sistema&quot;,$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
	ISPICKVAL(OSFMX_ContractStatus__c, &quot;Firmado&quot;),
	ISBLANK(OSFMX_ContractSignDate__c),
	OR(RecordType.DeveloperName=&quot;OSFMX_Electricidad&quot;,RecordType.DeveloperName=&quot;Otras_Soluciones&quot;,RecordType.DeveloperName=&quot;OSFMX_Gas&quot;)
)</errorConditionFormula>
    <errorDisplayField>OSFMX_ContractSignDate__c</errorDisplayField>
    <errorMessage>Debe completar el campo Fecha de Firma del Contrato para poder seleccionar el Estado del Contrato como Firmado</errorMessage>
</ValidationRule>