salesforce_sfdx/main/default/objects/Opportunity/validationRules/OSFPE_vr_data_financiera_oportunidad.validationRule-meta.xml
<ValidationRule>
    <fullName>OSFPE_vr_data_financiera_oportunidad</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( 
OR ( 
ISPICKVAL(StageName, &quot;Elaboración de Propuesta&quot;), 
ISPICKVAL(StageName, &quot;Aprobación de Propuesta&quot;), 
ISPICKVAL(StageName, &quot;Propuesta Enviada&quot;)), 
$RecordType.DeveloperName =&quot;OSFPE_rt_Oportunidad_Energia_Peru&quot;, 
ISBLANK(TEXT(OSFPE_fld_Clasificacion_Sentinel__c)), 
ISBLANK(OSFPE_fld_Potencia_contratada_finanza_MW__c), 
ISBLANK(OSFMX_DeliveryTime__c) 
)</errorConditionFormula>
    <errorMessage>Para pasar a la siguiente etapa usted debe completar la información para Finanzas: Calificación Sentinel, Potencia y Plazo</errorMessage>
</ValidationRule>