salesforce_sfdx/main/default/objects/Opportunity/validationRules/OSFPE_vr_datos_obligatorios_cerrada_gana.validationRule-meta.xml
<ValidationRule>
    <fullName>OSFPE_vr_datos_obligatorios_cerrada_gana</fullName>
    <active>true</active>
    <errorConditionFormula>$RecordType.DeveloperName = &quot;OSFPE_rt_Oportunidad_Energia_Peru&quot; &amp;&amp;
ISPICKVAL(StageName, &quot;Cerrada ganada&quot;) &amp;&amp;
(
				ISBLANK(SyncedQuoteId) ||
				ISBLANK(OSFMX_ContractSignDate__c) 
)</errorConditionFormula>
    <errorMessage>Para cerrar la oportunidad usted debe: crear una oferta y sincronizarla con la oportunidad. ¡También debe completar la fecha de firma del contrato!</errorMessage>
</ValidationRule>