salesforce_sfdx/main/default/objects/Opportunity/validationRules/OSFPE_vr_oferta_sincronizada.validationRule-meta.xml
<ValidationRule>
    <fullName>OSFPE_vr_oferta_sincronizada</fullName>
    <active>true</active>
    <errorConditionFormula>$RecordType.DeveloperName = &quot;OSFPE_rt_Oportunidad_Energia_Peru&quot; &amp;&amp;
ISBLANK(SyncedQuoteId) &amp;&amp;
(
				ISPICKVAL(StageName, &quot;Propuesta Enviada&quot;) ||
				ISPICKVAL(StageName, &quot;Adjudicado&quot;)
)</errorConditionFormula>
    <errorMessage>Para pasar a la etapa &quot;Propuesta Enviada&quot; o &quot;Adjudicado&quot; se debe sincronizar una oferta con la oportunidad.</errorMessage>
</ValidationRule>