salesforce_sfdx/main/default/objects/Opportunity/validationRules/OSFPE_vr_opcion_cierre_no_ganado.validationRule-meta.xml
<ValidationRule>
    <fullName>OSFPE_vr_opcion_cierre_no_ganado</fullName>
    <active>true</active>
    <errorConditionFormula>( 
				RecordType.DeveloperName = &quot;OSFPE_rt_Oportunidad_Energia_Peru&quot; ||
	   RecordType.DeveloperName = &quot;OSFPE_rt_Oportunidad_Soluciones_Peru&quot;
) &amp;&amp;
	ISPICKVAL( StageName, &quot;Cerrada Perdida&quot; ) &amp;&amp;
	ISPICKVAL( OSFCL_Opciones_cierre_no_ganado__c, &quot;&quot; )</errorConditionFormula>
    <errorMessage>Se debe ingresar una Opción de cierre no ganado si la etapa es Cerrada Perdida.</errorMessage>
</ValidationRule>