salesforce_sfdx/main/default/objects/Opportunity/validationRules/Puesta_en_servicio_no_puede_desmarcarse.validationRule-meta.xml
<ValidationRule>
    <fullName>Puesta_en_servicio_no_puede_desmarcarse</fullName>
    <active>true</active>
    <description>Una vez la casilla &quot;Puesta en servicio&quot; es seleccionada, NO se puede desmarcar.</description>
    <errorConditionFormula>AND( 
PRIORVALUE( OSFMX_StartUp__c ) = TRUE, 
ISCHANGED( OSFMX_StartUp__c ),$Profile.Name &lt;&gt; &quot;Administrador del sistema&quot;,$Profile.Name &lt;&gt; &quot;System Administrator&quot;)</errorConditionFormula>
    <errorMessage>Una vez la casilla &quot;Puesta en servicio&quot; es seleccionada, NO se puede desmarcar.</errorMessage>
</ValidationRule>