salesforce_sfdx/main/default/objects/Opportunity/validationRules/Valida_fecha_de_envio.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_fecha_de_envio</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
OSFMX_NumberAssociatedOffers__c&lt;1,  NOT(ISNULL(OSFMX_BindingOffersDeliveryDate__c)))</errorConditionFormula>
    <errorDisplayField>OSFMX_BindingOffersDeliveryDate__c</errorDisplayField>
    <errorMessage>No puedes modificar la fecha de envio si no hay una oferta asociada a la oportunidad.</errorMessage>
</ValidationRule>