salesforce_sfdx/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OSFMX_SolutionType__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.OSFMX_Electricidad,Opportunity.OSFMX_Gas,Opportunity.Otras_Soluciones</value>
    </filters>
    <label>Todas las oportunidades</label>
</ListView>