salesforce_sfdx/main/default/objects/Opportunity/listViews/Default_Opportunity_Pipeline.listView-meta.xml
<ListView>
    <fullName>Default_Opportunity_Pipeline</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OSFMX_SolutionType__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>En proceso</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.OSFMX_Electricidad,Opportunity.OSFMX_Gas,Opportunity.Otras_Soluciones</value>
    </filters>
    <label>Mis Oportunidades en Proceso</label>
</ListView>