salesforce_sfdx/main/default/objects/Opportunity/listViews/Mis_Oportunidades_por_Etapa.listView-meta.xml
<ListView>
    <fullName>Mis_Oportunidades_por_Etapa</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Opportunity.vlocity_cmt__MobilePhoneOpportunity</value>
    </filters>
    <label>Mis Oportunidades por Etapa</label>
</ListView>